<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/aloud_config"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="ignoreAudioFocus"
            android:summary="@string/ignore_audio_focus_summary"
            android:title="@string/ignore_audio_focus_title" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="pauseReadAloudWhilePhoneCalls"
            android:summary="@string/pause_read_aloud_while_phone_calls_summary"
            android:title="@string/pause_read_aloud_while_phone_calls_title" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:title="@string/read_aloud_wake_lock"
            android:summary="@string/read_aloud_wake_lock_summary"
            android:key="readAloudWakeLock"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:title="@string/system_media_control_compatibility_change"
            android:summary="@string/system_media_control_compatibility_change_summary"
            android:key="systemMediaControlCompatibilityChange"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:title="@string/pref_media_button_per_next"
            android:summary="@string/pref_media_button_per_next_summary"
            android:key="mediaButtonPerNext"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:title="@string/read_aloud_by_page"
            android:summary="@string/read_aloud_by_page_summary"
            android:key="readAloudByPage"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:title="@string/stream_read_aloud_audio"
            android:summary="@string/stream_read_aloud_audio_summary"
            android:key="streamReadAloudAudio"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:title="@string/speak_engine"
            android:summary="TTS"
            android:key="appTtsEngine"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:title="@string/sys_tts_config"
            android:summary="@string/sys_tts_config_summary"
            android:key="sysTtsConfig"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.EditTextPreference
            android:key="audioPreDownloadNum"
            android:title="听书预加载数量(章节)"
            android:summary="设置听书时预先下载的章节数量"
            android:defaultValue="10"
            android:inputType="number"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.EditTextPreference
            android:key="audioCacheCleanTime"
            android:title="音频缓存保留时间(分钟)，输入 0 为退出即刻清理"
            android:summary="听书缓存文件保留多久后自动删除，输入 0 代表退出即刻清理"
            android:defaultValue="10"
            android:inputType="number"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="bgmSetting"
            android:title="背景音乐设置"
            android:summary="配置听书时的背景音乐文件夹、独立音量及切歌控制"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

</androidx.preference.PreferenceScreen>
